# warenhaus

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
kafka_client/: Cargo.toml
kafka_client/src/: main.rs
lang/: Cargo.toml
lang/src/: code_runner.rs  lib.rs  wasm_error.rs
server/: Cargo.toml  Dockerfile
server/src/: command.rs  config.rs  main.rs  web.rs
server/src/query/: code_runner.rs  mod.rs
server/src/storage/: auto_index.rs  auto_index_error.rs  cell.rs  column.rs  column_frame.rs  data_type.rs  mod.rs
src/: config.rs  main.rs  storage.rs  web.rs
src/storage/: column.rs  data_type.rs  mod.rs
