[package]
name = "warenhaus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crc = "3.0.1"
futures = "0.3.26"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
warp = "0.3.3"
bytes = "1.4.0"
anyhow = "1.0.69"
tempfile = "3.3.0"
wasmtime = "5.0.0"
chrono = "0.4.23"
ctrlc = "3.2.5"
